# rquickjs-cli

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
src/: main.rs
