[package]
name = "rquickjs-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "rquickjs-cli"
repository = "https://github.com/ahaoboy/rquickjs-cli"
homepage = "https://github.com/ahaoboy/rquickjs-cli"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
rquickjs = { git = "https://github.com/DelSkayn/rquickjs" }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[[bin]]
name = "rquickjs"
path = "src/main.rs"
