[package]
name = "rquickjs-cli"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "rquickjs-cli"
repository = "https://github.com/ahaoboy/rquickjs-cli"
homepage = "https://github.com/ahaoboy/rquickjs-cli"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
rquickjs-core = { git = "https://github.com/DelSkayn/rquickjs", features = [
  # "bindgen",
] }
[target.'cfg(all(not(target_os = "windows"), not(target_os = "android"), not(target_env = "musl")))'.dependencies]
snmalloc-rs = { version = "0.3", features = [
  "default",
  "lto",
], default-features = false }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[[bin]]
name = "rquickjs"
path = "src/main.rs"
